added ixcoin pool

--- a/pools.cfg
+++ b/pools.cfg
@@ -540,6 +540,14 @@ api_method: json
 api_key: shares_this_round
 url: http://i0.digbtc.net/main.php
 
+[digixc]
+name: DigBTC.net (ixc)
+mine_address: ix.digbtc.net:9366
+api_address: http://ix.digbtc.net/papi.php
+api_method: json
+api_key: shares_this_round
+url: http://ix.digbtc.net/main.php
+
 [asspenny]
 name: Keninishna's unlucky pool
 mine_address: asspennypool.com:8443
