--- a/pools.cfg
+++ b/pools.cfg
@@ -163,7 +163,7 @@ api_method: json
 api_key: roundshares
 api_key_mhashrate: hashrate
 user_api_address: https://bitclockers.com/api/%(bitclockers_user_apikey)s
-url: https://bitclockers.com
+url: https://bitclockers.com/dashboard
 
 [nofeemining]
 name: NoFeeMining.com
