--- a/pools.cfg
+++ b/pools.cfg
@@ -350,6 +350,7 @@ mine_address: btc.digbtc.net:8332
 api_address: http://digbtc.net/papi.php
 api_method: json
 api_key: shares_this_round
+api_key_mhashrate: pool_total_mhash
 url: http://www.digbtc.net/main.php
 
 [bithasher]
