btcmine hashrate fix

--- a/pools.cfg
+++ b/pools.cfg
@@ -385,7 +385,7 @@ api_address: http://btcmine.com/stats/
 api_method:re
 api_key: <td><span id="rs_round_shares">([0-9]+)</span></td>
 api_strip:''
-api_key_mhashrate: <td><span id="rs_hashrate">([0-9]+).
+api_key_mhashrate: [<td><span id="rs_hashrate">]+([0-9]+).
 url: http://btcmine.com
 
 [i0g]
