Added guildminers + c: descr in user.cfg.def en/esp

--- a/pools.cfg
+++ b/pools.cfg
@@ -558,3 +558,13 @@ api_method: json
 api_key: shares
 api_key_mhashrate: poolhash
 url: http://asspennypool.com
+
+[guildminers]
+name: Guild Miners
+mine_address: pit.guildminers.com:8332
+api_address: http://guildminers.com/
+api_method: re
+api_key: ([,0-9]+) shares
+api_strip: ','
+url: https://guildminers.com/account
+
