Add yourbtc mine

--- a/pools.cfg
+++ b/pools.cfg
@@ -568,3 +568,13 @@ api_key: ([,0-9]+) shares
 api_strip: ','
 url: https://guildminers.com/account
 
+[yourbtc]
+name: YourBtc.net
+mine_address: yourbtc.net:8332
+api_address: http://yourbtc.net
+api_method:re
+api_key: Round Shares:</strong> ([,0-9]+).
+api_strip:','
+api_key_ghashrate: Hashrate:</strong> ([0-9.]+) GHash/s 
+url: http://yourbtc.net
+
