I correct BitChomp url in pools.cfg and add some data about BitMinersUnion and Namebit in pools info files

--- a/pools.cfg
+++ b/pools.cfg
@@ -117,7 +117,7 @@ mine_address: eu1.triplemining.com:8344
 api_address: http://api.triplemining.com/json/stats
 api_method: json
 api_key: solved
-url: https://www.triplemining.com/stats
+url: https://www.triplemining.com/account
 
 [eligius]
 name: Eligius.st
@@ -163,7 +163,7 @@ api_method: json
 api_key: roundshares
 api_key_mhashrate: hashrate
 user_api_address: https://bitclockers.com/api/%(bitclockers_user_apikey)s
-url: https://bitclockers.com
+url: https://bitclockers.com/dashboard
 
 [nofeemining]
 name: NoFeeMining.com
@@ -350,6 +350,7 @@ mine_address: btc.digbtc.net:8332
 api_address: http://digbtc.net/papi.php
 api_method: json
 api_key: shares_this_round
+api_key_mhashrate: pool_total_mhash
 url: http://www.digbtc.net/main.php
 
 [bithasher]
@@ -384,6 +385,7 @@ api_address: http://btcmine.com/stats/
 api_method:re
 api_key: <td><span id="rs_round_shares">([0-9]+)</span></td>
 api_strip:''
+api_key_mhashrate: <td><span id="rs_hashrate">([0-9.]+)
 url: http://btcmine.com
 
 [i0g]
@@ -421,7 +423,7 @@ api_address: http://www.namebit.org/
 api_method:re
 api_key:<td id="current_share_count">([0-9]+)</td>
 api_strip:' '
-url: http://www.namebit.org/
+url: http://www.namebit.org/details?username=%(user)s
 
 [bitchomp]
 name: BitChomp.info (nmc)
@@ -431,7 +433,7 @@ api_address: http://bitchomp.info/ncp/index.php
 api_method:re
 api_key: round</td><td class="show">([ 0-9]+)</td>
 api_strip:' '
-url:http://www.bitchomp.info/
+url: http://www.bitchomp.info/ncp/user.php?address=%(user)s
 
 [abc]
 name: ABCPool.co
@@ -540,6 +542,14 @@ api_method: json
 api_key: shares_this_round
 url: http://i0.digbtc.net/main.php
 
+[digixc]
+name: DigBTC.net (ixc)
+mine_address: ix.digbtc.net:9366
+api_address: http://ix.digbtc.net/papi.php
+api_method: json
+api_key: shares_this_round
+url: http://ix.digbtc.net/main.php
+
 [asspenny]
 name: Keninishna's unlucky pool
 mine_address: asspennypool.com:8443
@@ -548,3 +558,23 @@ api_method: json
 api_key: shares
 api_key_mhashrate: poolhash
 url: http://asspennypool.com
+
+[guildminers]
+name: Guild Miners
+mine_address: pit.guildminers.com:8332
+api_address: http://guildminers.com/
+api_method: re
+api_key: ([,0-9]+) shares
+api_strip: ','
+url: https://guildminers.com/account
+
+[yourbtc]
+name: YourBtc.net
+mine_address: yourbtc.net:8332
+api_address: http://yourbtc.net
+api_method:re
+api_key: Round Shares:</strong> ([,0-9]+).
+api_strip:','
+api_key_ghashrate: Hashrate:</strong> ([0-9.]+) GHash/s 
+url: http://yourbtc.net
+
