--- a/pools.cfg
+++ b/pools.cfg
@@ -227,7 +227,7 @@ api_address: https://www.btcguild.com/pool_stats.php
 api_method: re_rate
 api_key: "hash_rate":([ 0-9]+).
 api_strip: ' '
-url: https://www.btcguild.com/my_account.php
+url: http://www.btcguild.com/my_account.php
 
 [btcgpps]
 name: BTCGuild.com (PPS)
