--- a/pools.cfg
+++ b/pools.cfg
@@ -578,3 +578,13 @@ api_strip:','
 api_key_ghashrate: Hashrate:</strong> ([0-9.]+) GHash/s 
 url: http://yourbtc.net
 
+[bitpenny]
+#http://www.bitpenny.com/
+name: BitPenny (PPS)
+mine_address: bitpenny.dyndns.biz:8338
+api_address: http://www.bitpenny.com
+api_method: re_rate
+api_key: ([.0-9]+) Mh/s &nbsp
+api_strip: '.'
+url: http://www.bitpenny.com
+
