--- a/pools.cfg
+++ b/pools.cfg
@@ -588,3 +588,12 @@ api_key: ([.0-9]+) Mh/s &nbsp
 api_strip: '.'
 url: http://www.bitpenny.com
 
+[coinotron]
+name: coinotron.com
+mine_address: coinotron.com:8322
+api_address: http://coinotron.com
+api_method: re_rateduration
+api_key_ghashrate: BTC</td>\W<td style="text-align: right;">   ([0-9]+).
+api_key_duration_hour_min: [0-9]+</td>\W+<td style="text-align: right;">([ 0-9]+)h([ 0-9]+)m</td>
+url: http://coinotron.com
+
