Added more pool types to name

--- a/pools.cfg
+++ b/pools.cfg
@@ -5,7 +5,7 @@
 #######################################
 
 [slush]
-name: Bitcoin.cz
+name: Bitcoin.cz (Prop)
 mine_address: api2.bitcoin.cz:8332
 api_address: http://mining.bitcoin.cz/stats/json/
 api_method: json
@@ -16,7 +16,7 @@ api_key_duration_hour_min: (\d+):(\d+):
 url: http://mining.bitcoin.cz/accounts/profile/
 
 [deepbit]
-name: DeepBit.com
+name: DeepBit.com (Prop)
 mine_address: pit.deepbit.net:8332
 api_address: http://deepbit.net/
 api_method: re_rate
@@ -25,7 +25,7 @@ api_strip: ''
 url: https://deepbit.net/stats
 
 [swepool]
-name: SwePool.net
+name: SwePool.net (Prop)
 mine_address: swepool.net:8337
 api_address: http://swepool.net/json?key=%(swepool_user_apikey)s
 api_method: json
@@ -36,7 +36,7 @@ api_key_duration_sec: (\d+)
 url: http://swepool.net/profile
 
 [ozco]
-name: OzCo.in
+name: OzCo.in (Prop)
 mine_address: ozco.in:8332
 api_address: https://ozco.in/api.php
 api_method: json
@@ -47,7 +47,7 @@ api_key_duration_sec: (\d+)
 url: https://ozco.in/blocks.php
 
 [polmine]
-name: PolMine.pl
+name: PolMine.pl (Prop)
 mine_address: polmine.pl:8347
 api_address: https://polmine.pl/?action=statistics
 api_method: re_rateduration
@@ -56,7 +56,7 @@ api_key_duration_day_hour_min: </b> <br/>([ 0-9]+)dni([ 0-9]+)godzin([ 0-9]+)min
 url: https://polmine.pl/?action=dashboardstat
 
 [oldpolmine]
-name: PolMine.pl (Old)
+name: PolMine.pl (Prop)
 mine_address: polmine.pl:8347
 api_address: https://polmine.pl/?action=statistics
 api_method: re
@@ -65,7 +65,7 @@ api_strip: ' '
 url: https://polmine.pl/?action=dashboardstat
 
 [mtred]
-name: MtRed.com
+name: MtRed.com (Prop)
 mine_address: mtred.com:8337
 api_address: https://mtred.com/api/user/key/%(mtred_user_apikey)s
 api_method: json
@@ -83,7 +83,7 @@ api_key_ghashrate: server,hashrate
 url: https://mtred.com/user/profile.html
 
 [rfc]
-name: RFCPool.com
+name: RFCPool.com (Prop)
 mine_address: pool.rfcpool.com:8332 
 api_address: https://www.rfcpool.com/api/pool/stats
 api_method: json
@@ -94,7 +94,7 @@ api_key_duration_sec: (\d+)
 url: https://www.rfcpool.com/account
 
 [btcmonkey]
-name: BitcoinMonkey.com
+name: BitcoinMonkey.com (Prop)
 mine_address: www.bitcoinmonkey.com:8332
 api_address: https://www.bitcoinmonkey.com/json/api.php
 api_method: json
@@ -103,7 +103,7 @@ api_key_mhashrate: pool_total_mhash
 url: https://bitcoinmonkey.com/stats.php
 
 [btcworld]
-name: BTCWorld.de
+name: BTCWorld.de (Prop)
 mine_address: btcworld.de:8332
 api_address: http://btcworld.de/statistics
 api_method: re
@@ -112,7 +112,7 @@ api_strip: ','
 url: http://btcworld.de/dashboard
 
 [triple]
-name: TripleMining.com
+name: TripleMining.com (Prop)
 mine_address: eu1.triplemining.com:8344
 api_address: http://api.triplemining.com/json/stats
 api_method: json
@@ -120,7 +120,7 @@ api_key: solved
 url: https://www.triplemining.com/account
 
 [eligius]
-name: Eligius.st
+name: Eligius.st (PPS)
 mine_address: su.mining.eligius.st:8337
 api_address: http://eligius.st/~artefact2/
 api_method: re
@@ -129,7 +129,7 @@ api_strip: ','
 url: http://eligius.st/~artefact2/5/%(user)s
 
 [arsbitcoin]
-name: ArsBitcoin.com
+name: ArsBitcoin.com (PPS)
 mine_address: arsbitcoin.com:8344
 api_address: https://www.arsbitcoin.com/api.php
 api_method: json
@@ -138,7 +138,7 @@ api_key_mhashrate: hashrate
 url: https://arsbitcoin.com/my_stats.php
 
 [bitp]
-name: BitP.it
+name: BitP.it (PPS)
 mine_address: pool.bitp.it:8334
 api_address: https://pool.bitp.it/api/pool?token=%(bitp_user_apikey)s
 api_method: json
@@ -147,7 +147,7 @@ user_api_address: https://pool.bitp.it/api/user?token=%(bitp_user_apikey)s
 url: https://pool.bitp.it/console
 
 [ninjac]
-name: NinjaCoin.com
+name: NinjaCoin.com (PPS)
 mine_address: mine.ninjacoin.com:8332
 api_address: https://www.ninjacoin.com/
 api_method: re_rate
@@ -156,7 +156,7 @@ api_strip: ' '
 url: https://www.ninjacoin.com/account.php
 
 [bitclockers]
-name: BitClockers.com
+name: BitClockers.com (Prop)
 mine_address: pool.bitclockers.com:8332
 api_address: http://bitclockers.com/api.json
 api_method: json
@@ -166,7 +166,7 @@ user_api_address: https://bitclockers.com/api/%(bitclockers_user_apikey)s
 url: https://bitclockers.com/dashboard
 
 [nofeemining]
-name: NoFeeMining.com
+name: NoFeeMining.com (Prop)
 mine_address: nofeemining.appspot.com:80
 api_address: https://nofeemining.appspot.com/api.php
 api_method: json
@@ -175,7 +175,7 @@ api_key_ghashrate: poolspeed
 url: https://nofeemining.appspot.com
 
 [poolmunity]
-name: PoolMunity.com
+name: PoolMunity.com (Prop)
 mine_address: poolmunity.com:8332
 api_address: https://poolmunity.com/api.php?server
 api_method: json
@@ -184,7 +184,7 @@ api_key_mhashrate: speed
 url: http://poolmunity.com
 
 [bitparking]
-name: BitParking.com (nmc)
+name: BitParking.com (NMC)
 namecoin: Yep
 mine_address: bitparking.com:9098
 api_address: http://bitparking.com/pool
@@ -194,7 +194,7 @@ api_strip: ' '
 url: http://bitparking.com/user/%(user)s
 
 [nmcbit]
-name: NMCBit.com
+name: NMCBit.com (NMC)
 namecoin: Yep
 mine_address: nmcbit.com:8332
 api_address: http://www.nmcbit.com/statistics
@@ -204,7 +204,7 @@ api_strip: ','
 url: http://nmcbit.com/dashboard
 
 [x8s]
-name: x8s.de
+name: x8s.de (Prop)
 mine_address: pit.x8s.de:8337
 api_address: http://btc.x8s.de/api/global.json
 api_method: json
@@ -212,7 +212,7 @@ api_key: round_shares
 url: http://btc.x8s.de
 
 [bclc]
-name: Bitcoins.lc
+name: Bitcoins.lc (Prop)
 mine_address: bitcoins.lc:8080    
 api_address: http://www.bitcoins.lc/stats.json
 api_method: re_rate
@@ -221,7 +221,7 @@ api_key: "hash_rate":([ 0-9]+).
 url: https://www.bitcoins.lc
 
 [btcg]
-name: BTCGuild.com
+name: BTCGuild.com (Prop)
 mine_address: btcguild.com:8332   
 api_address: https://www.btcguild.com/pool_stats.php
 api_method: re_rate
@@ -241,7 +241,7 @@ api_method: disable
 url: https://pps.btcguild.com/my_account.php
 
 [mineco]
-name: MineCo.in
+name: MineCo.in (PPLNS)
 mine_address: mineco.in:3000 
 api_address: https://mineco.in/stats.json 
 api_method: json
@@ -250,7 +250,7 @@ api_key_hashrate: hashrate
 url: https://mineco.in/workers
 
 [eclipsemc]
-name: EclipseMC.com
+name: EclipseMC.com (Score)
 mine_address: pacrim.eclipsemc.com:8337
 api_address: https://eclipsemc.com/api.php?key=%(eclipsemc_apikey)s&action=poolstats
 api_method: json_ec
@@ -258,7 +258,7 @@ api_key: round_shares
 url: https://eclipsemc.com
 
 [mmf]
-name: Mining.Mainframe.nl
+name: Mining.Mainframe.nl (PPLNS)
 mine_address: mining.mainframe.nl:8343 
 api_method:json
 api_key: shares_this_round
@@ -266,7 +266,7 @@ api_address: http://mining.mainframe.nl/api
 url: http://mining.mainframe.nl
 
 [bcpool]
-name: BitcoinPool.com
+name: BitcoinPool.com (Prop)
 mine_address: bitcoinpool.com:8334 
 api_address: http://bitcoinpool.com/index.php?do=currentround
 api_method: re_shareestimate
@@ -280,7 +280,7 @@ api_key_estimate: <td width="120" align="center"><img src="btc.png" border="0" a
 url: http://bitcoinpool.com
 
 [unitedminers]
-name: UnitedMiners.com
+name: UnitedMiners.com (Prop)
 mine_address: pool.unitedminers.com:8332 
 api_address: http://www.unitedminers.com/?action=api
 api_method: json
@@ -289,7 +289,7 @@ api_key_mhashrate: hashrate
 url: http://www.unitedminers.com
 
 [bmunion]
-name: BitMinersUnion.org
+name: BitMinersUnion.org (Prop)
 mine_address: pool.bitminersunion.org:8341
 api_address: http://pool.bitminersunion.org/stats.php
 api_method: re
@@ -297,7 +297,7 @@ api_key: Shares this round:([0-9]+)<br/>
 url: http://pool.bitminersunion.org
 
 [btcpool24]
-name: BTCPool24
+name: BTCPool24 (Prop)
 mine_address: min.btcpool24.com:8338
 #api_address: http://www.btcpool24.com/json_stats.php
 #api_method: json
@@ -309,7 +309,7 @@ api_strip: ' '
 url: http://www.btcpool24.com
 
 [btcserv]
-name: BTCServ.net
+name: BTCServ.net (Prop)
 mine_address: btcserv.net:8335
 api_address: http://btcserv.net/json/pool/
 api_method: json
@@ -335,7 +335,7 @@ api_key: shares
 url: https://btcserv.net/user/round-stats/
 
 [bloodys]
-name: Bloodys.com
+name: Bloodys.com (Prop)
 mine_address:pool.bloodys.com:8332
 api_address:http://pool.bloodys.com/?action=statistics
 api_method:re
@@ -344,7 +344,7 @@ api_strip:','
 url: http://pool.bloodys.com/?action=dashboard
 
 [digbtc]
-name: DigBTC.net
+name: DigBTC.net (Prop)
 lp_address:INVALID
 mine_address: btc.digbtc.net:8332
 api_address: http://digbtc.net/papi.php
@@ -354,7 +354,7 @@ api_key_mhashrate: pool_total_mhash
 url: http://www.digbtc.net/main.php
 
 [bithasher]
-name: BitHasher.com
+name: BitHasher.com (Prop)
 mine_address: bithasher.com:8332
 api_address: http://bithasher.com
 api_method:re
@@ -362,7 +362,7 @@ api_key: Round Shares</td><td>([,0-9]+)<
 url: http://bithasher.com/index.php/account
 
 [kiwipool]
-name: KiwiPool.me
+name: KiwiPool.me (Prop)
 mine_address: pool2.kiwipool.me:8332
 api_address: http://5.hidemyass.com/ip-1/encoded/Oi8vd3d3Lmtpd2lwb29sLm1l&f=norefer
 api_method: re
@@ -371,7 +371,7 @@ api_strip:''
 url: http://www.kiwipool.me
 
 [itzod]
-name: Itzod.ru
+name: Itzod.ru (PPS)
 mine_address: lp1.itzod.ru:8344
 api_address: https://pool.itzod.ru/api.php
 api_method: json
@@ -379,7 +379,7 @@ api_key: total_shares_count
 url: http://pool.itzod.ru/index.php
 
 [btcmine]
-name: BTCmine.com
+name: BTCmine.com (Score)
 mine_address: btcmine.com:8332
 api_address: http://btcmine.com/stats/
 api_method:re
@@ -389,7 +389,7 @@ api_key_mhashrate: <td><span id="rs_hashrate">([0-9.]+)
 url: http://btcmine.com
 
 [i0g]
-name: i0Guild.com (i0c)
+name: i0Guild.com (I0C)
 mine_address: i0.btcguild.com:8332   
 api_address: http://i0.btcguild.com/
 api_method: re_rate
@@ -398,7 +398,7 @@ api_strip: ' '
 url: http://i0.btcguild.com/my_account.php
 
 [bitfarms]
-name: BitFarms.ca
+name: BitFarms.ca (PPS)
 mine_address: pool.bitfarms.ca:8332 
 api_address: http://bitfarms.ca/
 api_method: re_rate
@@ -407,7 +407,7 @@ api_strip: ' '
 url: http://bitfarms.ca/
 
 [masterpool]
-name: MasterPool.eu (nmc)
+name: MasterPool.eu (NMC)
 namecoin: Yep
 mine_address: balancer.masterpool.eu:8888
 api_address: https://masterpool.eu/api
@@ -416,7 +416,7 @@ api_key:shares
 url:https://masterpool.eu/dashboard
 
 [namebit]
-name: NameBit.org (nmc)
+name: NameBit.org (NMC)
 namecoin: Yep
 mine_address: pool.namebit.org:10000
 api_address: http://www.namebit.org/
@@ -426,7 +426,7 @@ api_strip:' '
 url: http://www.namebit.org/details?username=%(user)s
 
 [bitchomp]
-name: BitChomp.info (nmc)
+name: BitChomp.info (NMC)
 namecoin: Yep
 mine_address: bitchomp.info:9098
 api_address: http://bitchomp.info/ncp/index.php
@@ -436,7 +436,7 @@ api_strip:' '
 url: http://www.bitchomp.info/ncp/user.php?address=%(user)s
 
 [abc]
-name: ABCPool.co
+name: ABCPool.co (PPS)
 mine_address: pool.ABCPool.co:8332
 api_address: http://www.abcpool.co/stats.php
 api_method: disable
@@ -445,7 +445,7 @@ api_strip: ' '
 url: http://www.abcpool.co/stats.php
 
 [p2pool]
-name: p2pool
+name: p2pool (PPLNS)
 mine_address: localhost:8332
 api_address: http://localhost:8332
 api_method: disable
@@ -465,7 +465,7 @@ pass: donation
 url: http://eligius.st/~artefact2/5/1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC
 
 [scguild]
-name: scGuild.com (scc)
+name: scGuild.com (SCC)
 mine_address: sc.btcguild.com:8332   
 api_address: http://sc.btcguild.com/
 api_method: re_rate
@@ -474,7 +474,7 @@ api_strip: ''
 url: http://sc.btcguild.com/my_account.php
 
 [sodigbtc]
-name: s0DigBTC.net (scc)
+name: s0DigBTC.net (SCC)
 mine_address: sobtc.digbtc.net:8332
 api_address: http://sobtc.digbtc.net/papi.php
 api_method: json
@@ -482,7 +482,7 @@ api_key: shares_this_round
 url: http://sobtc.digbtc.net/main.php
 
 [scbitparking]
-name: scBitParking.com (scc)
+name: scBitParking.com (SCC)
 mine_address: scpool.bitparking.com:12098
 api_address: http://scpool.bitparking.com/user
 api_method: re
@@ -491,7 +491,7 @@ api_strip: ' '
 url: http://scpool.bitparking.com/user/%(user)s
 
 [squid]
-name: SquidNet (scc)
+name: SquidNet (SCC)
 mine_address: pool.squidnet.org:8341
 api_address: http://pool.squidnet.org/api
 api_method: json
@@ -499,7 +499,7 @@ api_key: shares_this_round
 url: http://pool.squidnet.org
 
 [mine4us]
-name: mine-for.us (scc)
+name: mine-for.us (SCC)
 mine_address: go.mine-for.us:16101
 api_address: http://solid.mine-for.us/index.php?page=round
 api_method: re
@@ -508,7 +508,7 @@ api_strip: ' '
 url: http://solid.mine-for.us/index.php?page=withdraw
 
 [poolmunitynmc]
-name: PoolMunity.com (nmc)
+name: PoolMunity.com (NMC)
 namecoin: Yep
 mine_address: poolmunity.com:18332
 api_address: https://poolmunity.com/api.php?server
@@ -517,7 +517,7 @@ api_key: totalShares
 url: http://poolmunity.com
 
 [ixparking]
-name: BitParking.com (ixc)
+name: BitParking.com (IXC)
 mine_address: ixpool.bitparking.com:10098
 api_address: http://ixpool.bitparking.com/pool
 api_method: re
@@ -526,7 +526,7 @@ api_strip: ' '
 url: http://ixpool.bitparking.com/user/%(user)s
 
 [i0parking]
-name: BitParking.com (i0c)
+name: BitParking.com (I0C)
 mine_address: i0pool.bitparking.com:11098
 api_address: http://i0pool.bitparking.com/pool
 api_method: re
@@ -535,7 +535,7 @@ api_strip: ' '
 url: http://i0pool.bitparking.com/user/%(user)s
 
 [digi0c]
-name: DigBTC.net (i0c)
+name: DigBTC.net (I0C)
 mine_address: i0.digbtc.net:8382
 api_address: http://i0.digbtc.net/papi.php
 api_method: json
@@ -543,7 +543,7 @@ api_key: shares_this_round
 url: http://i0.digbtc.net/main.php
 
 [digixc]
-name: DigBTC.net (ixc)
+name: DigBTC.net (IXC)
 mine_address: ix.digbtc.net:9366
 api_address: http://ix.digbtc.net/papi.php
 api_method: json
@@ -551,7 +551,7 @@ api_key: shares_this_round
 url: http://ix.digbtc.net/main.php
 
 [asspenny]
-name: Keninishna's unlucky pool
+name: Keninishna's unlucky pool (Prop)
 mine_address: asspennypool.com:8443
 api_address: http://asspennypool.com/api.php?api_key=%(asspenny_user_apikey)s
 api_method: json
@@ -560,7 +560,7 @@ api_key_mhashrate: poolhash
 url: http://asspennypool.com
 
 [guildminers]
-name: Guild Miners
+name: Guild Miners (Prop)
 mine_address: pit.guildminers.com:8332
 api_address: http://guildminers.com/
 api_method: re
@@ -569,7 +569,7 @@ api_strip: ','
 url: https://guildminers.com/account
 
 [yourbtc]
-name: YourBtc.net
+name: YourBtc.net (DGP)
 mine_address: yourbtc.net:8332
 api_address: http://yourbtc.net
 api_method:re
@@ -589,7 +589,7 @@ api_strip: '.'
 url: http://www.bitpenny.com
 
 [coinotron]
-name: coinotron.com
+name: coinotron.com (Score)
 mine_address: coinotron.com:8322
 api_address: http://coinotron.com
 api_method: re_rateduration
