Upd btcserv name info

--- a/pools.cfg
+++ b/pools.cfg
@@ -309,7 +309,7 @@ api_strip: ' '
 url: http://www.btcpool24.com
 
 [btcserv]
-name: BTCServ.net (Prop)
+name: BTCServ.net (PPS)
 mine_address: btcserv.net:8335
 api_address: http://btcserv.net/json/pool/
 api_method: json
