Fixed few pools name info, thanks MobiusL

--- a/pools.cfg
+++ b/pools.cfg
@@ -83,7 +83,7 @@ api_key_ghashrate: server,hashrate
 url: https://mtred.com/user/profile.html
 
 [rfc]
-name: RFCPool.com (Prop)
+name: RFCPool.com (PPLNS)
 mine_address: pool.rfcpool.com:8332 
 api_address: https://www.rfcpool.com/api/pool/stats
 api_method: json
@@ -166,7 +166,7 @@ user_api_address: https://bitclockers.com/api/%(bitclockers_user_apikey)s
 url: https://bitclockers.com/dashboard
 
 [nofeemining]
-name: NoFeeMining.com (Prop)
+name: NoFeeMining.com (PPS)
 mine_address: nofeemining.appspot.com:80
 api_address: https://nofeemining.appspot.com/api.php
 api_method: json
@@ -280,7 +280,7 @@ api_key_estimate: <td width="120" align="center"><img src="btc.png" border="0" a
 url: http://bitcoinpool.com
 
 [unitedminers]
-name: UnitedMiners.com (Prop)
+name: UnitedMiners.com (PPLNS)
 mine_address: pool.unitedminers.com:8332 
 api_address: http://www.unitedminers.com/?action=api
 api_method: json
