--- a/pools.cfg
+++ b/pools.cfg
@@ -573,7 +573,7 @@ name: YourBtc.net (DGP)
 mine_address: yourbtc.net:8332
 api_address: http://yourbtc.net
 api_method:re
-api_key: Round Shares:</strong> ([,0-9]+).
+api_key: Round Shares:</strong> ([,0-9]+)
 api_strip:','
 api_key_ghashrate: Hashrate:</strong> ([0-9.]+) GHash/s 
 url: http://yourbtc.net
@@ -584,16 +584,16 @@ name: BitPenny (PPS)
 mine_address: bitpenny.dyndns.biz:8338
 api_address: http://www.bitpenny.com
 api_method: re_rate
-api_key: ([.0-9]+) Mh/s &nbsp
-api_strip: '.'
+api_key: ([0-9]+).[0-9]+ Mh/s &nbsp
+#api_strip: '.'
 url: http://www.bitpenny.com
 
 [coinotron]
 name: coinotron.com (Score)
 mine_address: coinotron.com:8322
-api_address: http://coinotron.com
+api_address: http://coinotron.com/coinotron/AccountServlet?action=home
 api_method: re_rateduration
-api_key_ghashrate: BTC</td>\W<td style="text-align: right;">   ([0-9]+).
+api_key_ghashrate: BTC</td>\r\n<td style="text-align: right;">   ([0-9]+.)
 api_key_duration_hour_min: [0-9]+</td>\W+<td style="text-align: right;">([ 0-9]+)h([ 0-9]+)m</td>
 url: http://coinotron.com
 
