--- a/pools.cfg
+++ b/pools.cfg
@@ -597,3 +597,11 @@ api_key_ghashrate: BTC</td>\r\n<td style="text-align: right;">   ([0-9]+.)
 api_key_duration_hour_min: [0-9]+</td>\W+<td style="text-align: right;">([ 0-9]+)h([ 0-9]+)m</td>
 url: http://coinotron.com
 
+[simplecoin]
+name: simplecoin.us (0% Prop)
+mine_address: pool.simplecoin.us:8337
+api_address: http://simplecoin.us/api.php
+api_method: json
+api_key: btcp__current_shares
+api_key_mhashrate: pool_hashrate
+url: http://simplecoin.us
