Upd masterpool cfg+info

--- a/pools.cfg
+++ b/pools.cfg
@@ -407,12 +407,14 @@ api_strip: ' '
 url: http://bitfarms.ca/
 
 [masterpool]
-name: MasterPool.eu (NMC)
+name: MasterPool.eu (BTC+NMC)
 namecoin: Yep
-mine_address: balancer.masterpool.eu:8888
-api_address: https://masterpool.eu/api
+mine_address: US01.masterpool.eu:8888
+api_address: https://masterpool.eu/jsonstats
 api_method:json
-api_key:shares
+api_key: BTC,shares
+api_key_ghashrate: hashrate
+api_key_duration: BTC,roundduration
 url:https://masterpool.eu/dashboard
 
 [namebit]
