Upd simplecoin info

--- a/pools.cfg
+++ b/pools.cfg
@@ -600,7 +600,7 @@ api_key_duration_hour_min: [0-9]+</td>\W+<td style="text-align: right;">([ 0-9]+
 url: http://coinotron.com
 
 [simplecoin]
-name: simplecoin.us
+name: simplecoin.us (BTC+NMC)
 mine_address: pool.simplecoin.us:8337
 api_address: http://simplecoin.us/api.php
 api_method: json
