Upd nmcbit info

--- a/pools.cfg
+++ b/pools.cfg
@@ -194,7 +194,7 @@ api_strip: ' '
 url: http://bitparking.com/user/%(user)s
 
 [nmcbit]
-name: NMCBit.com (NMC)
+name: NMCBit.com (BTC+NMC)
 namecoin: Yep
 mine_address: nmcbit.com:8332
 api_address: http://www.nmcbit.com/statistics
