masterpool api fix, thanks itstooez

--- a/pools.cfg
+++ b/pools.cfg
@@ -412,9 +412,9 @@ namecoin: Yep
 mine_address: US01.masterpool.eu:8888
 api_address: https://masterpool.eu/jsonstats
 api_method:json
-api_key: BTC,shares
+api_key: blockchains,BTC,shares
 api_key_ghashrate: hashrate
-api_key_duration: BTC,roundduration
+api_key_duration: blockchains,BTC,roundduration
 url:https://masterpool.eu/dashboard
 
 [namebit]
