Update information about IXcoin Bitparking pool, BitChomp and Mine-for.US on POOLS_INFO* files and make compatible the BitChomp changes in files user.cfg.* and pools.cfg

--- a/pools.cfg
+++ b/pools.cfg
@@ -428,12 +428,12 @@ url: http://www.namebit.org/details?username=%(user)s
 [bitchomp]
 name: BitChomp.info (NMC)
 namecoin: Yep
-mine_address: bitchomp.info:9098
-api_address: http://bitchomp.info/ncp/index.php
+mine_address: bitchomp.info:8332
+api_address: http://www.bitchomp.info/api
 api_method:re
-api_key: round</td><td class="show">([ 0-9]+)</td>
-api_strip:' '
-url: http://www.bitchomp.info/ncp/user.php?address=%(user)s
+api_key: "shares": (\d+)
+api_strip:''
+url: http://www.bitchomp.info/
 
 [abc]
 name: ABCPool.co (PPS)
