Modify the ABCPool.co settings in pools.cfg

--- a/pools.cfg
+++ b/pools.cfg
@@ -439,9 +439,9 @@ url: http://www.bitchomp.info/
 name: ABCPool.co (PPS)
 mine_address: pool.ABCPool.co:8332
 api_address: http://www.abcpool.co/stats.php
-api_method: disable
-api_key: <span class="stat">([0-9.]+) GH/s</span>
-api_strip: ' '
+api_method: re_rate
+api_key: <span class="stat">([0-9]+).[0-9]+ GH/s</span>
+api_strip: ''
 url: http://www.abcpool.co/stats.php
 
 [p2pool]
