mtred pps small fix

--- a/pools.cfg
+++ b/pools.cfg
@@ -65,7 +65,7 @@ api_strip: ' '
 url: https://polmine.pl/?action=dashboardstat
 
 [mtred]
-name: MtRed.com (Prop)
+name: MtRed.com (PPS)
 mine_address: mtred.com:8337
 api_address: https://mtred.com/api/user/key/%(mtred_user_apikey)s
 api_method: json
