--- a/pools.cfg
+++ b/pools.cfg
@@ -5,7 +5,7 @@
 #######################################
 
 [slush]
-name: Bitcoin.cz (Prop)
+name: Bitcoin.cz (MergeM-Score)
 mine_address: api2.bitcoin.cz:8332
 api_address: http://mining.bitcoin.cz/stats/json/
 api_method: json
@@ -194,7 +194,7 @@ api_strip: ' '
 url: http://bitparking.com/user/%(user)s
 
 [nmcbit]
-name: NMCBit.com (BTC+NMC)
+name: NMCBit.com (MergeM-PPS)
 mine_address: nmcbit.com:8332
 api_address: http://www.nmcbit.com/statistics
 api_method: re
@@ -393,7 +393,7 @@ api_strip: ' '
 url: http://bitfarms.ca/
 
 [masterpool]
-name: MasterPool.eu (BTC+NMC)
+name: MasterPool.eu (MergeM-Prop)
 mine_address: US01.masterpool.eu:8888
 api_address: https://masterpool.eu/jsonstats
 api_method:json
@@ -413,7 +413,7 @@ api_strip:' '
 url: http://www.namebit.org/details?username=%(user)s
 
 [bitchomp]
-name: BitChomp.info (NMC)
+name: BitChomp.info (MergeM-SMPPS)
 namecoin: Yep
 mine_address: bitchomp.info:8332
 api_address: http://www.bitchomp.info/api
@@ -566,7 +566,6 @@ api_key_ghashrate: Hashrate:</strong> ([0-9.]+) GHash/s
 url: http://yourbtc.net
 
 [bitpenny]
-#http://www.bitpenny.com/
 name: BitPenny (PPS)
 mine_address: bitpenny.dyndns.biz:8338
 api_address: http://www.bitpenny.com
@@ -585,7 +584,7 @@ api_key_duration_hour_min: [0-9]+</td>\W+<td style="text-align: right;">([ 0-9]+
 url: http://coinotron.com
 
 [simplecoin]
-name: simplecoin.us (BTC+NMC)
+name: simplecoin.us (MergeM-Prop)
 mine_address: pool.simplecoin.us:8337
 api_address: http://simplecoin.us/api.php
 api_method: json
