Added cointype for all pools

--- a/pools.cfg
+++ b/pools.cfg
@@ -5,6 +5,7 @@
 #######################################
 
 [slush]
+coin:btc
 name: Bitcoin.cz (Prop)
 mine_address: api2.bitcoin.cz:8332
 api_address: http://mining.bitcoin.cz/stats/json/
@@ -16,6 +17,7 @@ api_key_duration_hour_min: (\d+):(\d+):
 url: http://mining.bitcoin.cz/accounts/profile/
 
 [deepbit]
+coin:btc
 name: DeepBit.com (Prop)
 mine_address: pit.deepbit.net:8332
 api_address: http://deepbit.net/
@@ -25,6 +27,7 @@ api_strip: ''
 url: https://deepbit.net/stats
 
 [swepool]
+coin:btc
 name: SwePool.net (Prop)
 mine_address: swepool.net:8337
 api_address: http://swepool.net/json?key=%(swepool_user_apikey)s
@@ -36,6 +39,7 @@ api_key_duration_sec: (\d+)
 url: http://swepool.net/profile
 
 [ozco]
+coin:btc
 name: OzCo.in (Prop)
 mine_address: ozco.in:8332
 api_address: https://ozco.in/api.php
@@ -47,6 +51,7 @@ api_key_duration_sec: (\d+)
 url: https://ozco.in/blocks.php
 
 [polmine]
+coin:btc
 name: PolMine.pl (Prop)
 mine_address: polmine.pl:8347
 api_address: https://polmine.pl/?action=statistics
@@ -56,6 +61,7 @@ api_key_duration_day_hour_min: </b> <br/>([ 0-9]+)dni([ 0-9]+)godzin([ 0-9]+)min
 url: https://polmine.pl/?action=dashboardstat
 
 [oldpolmine]
+coin:btc
 name: PolMine.pl (Prop)
 mine_address: polmine.pl:8347
 api_address: https://polmine.pl/?action=statistics
@@ -65,6 +71,7 @@ api_strip: ' '
 url: https://polmine.pl/?action=dashboardstat
 
 [mtred]
+coin:btc
 name: MtRed.com (Prop)
 mine_address: mtred.com:8337
 api_address: https://mtred.com/api/user/key/%(mtred_user_apikey)s
@@ -74,6 +81,7 @@ api_key_ghashrate: server,hashrate
 url: https://mtred.com/user/profile.html
 
 [mtredpps]
+coin:btc
 name: MtRed.com (PPS)
 mine_address: mtred.com:8837
 api_address: https://mtred.com/api/user/key/%(mtred_user_apikey)s
@@ -83,6 +91,7 @@ api_key_ghashrate: server,hashrate
 url: https://mtred.com/user/profile.html
 
 [rfc]
+coin:btc
 name: RFCPool.com (PPLNS)
 mine_address: pool.rfcpool.com:8332 
 api_address: https://www.rfcpool.com/api/pool/stats
@@ -94,6 +103,7 @@ api_key_duration_sec: (\d+)
 url: https://www.rfcpool.com/account
 
 [btcmonkey]
+coin:btc
 name: BitcoinMonkey.com (Prop)
 mine_address: www.bitcoinmonkey.com:8332
 api_address: https://www.bitcoinmonkey.com/json/api.php
@@ -103,6 +113,7 @@ api_key_mhashrate: pool_total_mhash
 url: https://bitcoinmonkey.com/stats.php
 
 [btcworld]
+coin:btc
 name: BTCWorld.de (Prop)
 mine_address: btcworld.de:8332
 api_address: http://btcworld.de/statistics
@@ -112,6 +123,7 @@ api_strip: ','
 url: http://btcworld.de/dashboard
 
 [triple]
+coin:btc
 name: TripleMining.com (Prop)
 mine_address: eu1.triplemining.com:8344
 api_address: http://api.triplemining.com/json/stats
@@ -120,6 +132,7 @@ api_key: solved
 url: https://www.triplemining.com/account
 
 [eligius]
+coin:btc
 name: Eligius.st (PPS)
 mine_address: su.mining.eligius.st:8337
 api_address: http://eligius.st/~artefact2/
@@ -129,6 +142,7 @@ api_strip: ','
 url: http://eligius.st/~artefact2/5/%(user)s
 
 [arsbitcoin]
+coin:btc
 name: ArsBitcoin.com (PPS)
 mine_address: arsbitcoin.com:8344
 api_address: https://www.arsbitcoin.com/api.php
@@ -138,6 +152,7 @@ api_key_mhashrate: hashrate
 url: https://arsbitcoin.com/my_stats.php
 
 [bitp]
+coin:btc
 name: BitP.it (PPS)
 mine_address: pool.bitp.it:8334
 api_address: https://pool.bitp.it/api/pool?token=%(bitp_user_apikey)s
@@ -147,6 +162,7 @@ user_api_address: https://pool.bitp.it/api/user?token=%(bitp_user_apikey)s
 url: https://pool.bitp.it/console
 
 [ninjac]
+coin:btc
 name: NinjaCoin.com (PPS)
 mine_address: mine.ninjacoin.com:8332
 api_address: https://www.ninjacoin.com/
@@ -156,6 +172,7 @@ api_strip: ' '
 url: https://www.ninjacoin.com/account.php
 
 [bitclockers]
+coin:btc
 name: BitClockers.com (Prop)
 mine_address: pool.bitclockers.com:8332
 api_address: http://bitclockers.com/api.json
@@ -166,6 +183,7 @@ user_api_address: https://bitclockers.com/api/%(bitclockers_user_apikey)s
 url: https://bitclockers.com/dashboard
 
 [nofeemining]
+coin:btc
 name: NoFeeMining.com (PPS)
 mine_address: nofeemining.appspot.com:80
 api_address: https://nofeemining.appspot.com/api.php
@@ -175,6 +193,7 @@ api_key_ghashrate: poolspeed
 url: https://nofeemining.appspot.com
 
 [poolmunity]
+coin:btc
 name: PoolMunity.com (Prop)
 mine_address: poolmunity.com:8332
 api_address: https://poolmunity.com/api.php?server
@@ -184,6 +203,7 @@ api_key_mhashrate: speed
 url: http://poolmunity.com
 
 [bitparking]
+coin:nmc
 name: BitParking.com (NMC)
 namecoin: Yep
 mine_address: bitparking.com:9098
@@ -194,6 +214,7 @@ api_strip: ' '
 url: http://bitparking.com/user/%(user)s
 
 [nmcbit]
+coin:btc
 name: NMCBit.com (BTC+NMC)
 mine_address: nmcbit.com:8332
 api_address: http://www.nmcbit.com/statistics
@@ -203,6 +224,7 @@ api_strip: ','
 url: http://nmcbit.com/dashboard
 
 [x8s]
+coin:btc
 name: x8s.de (Prop)
 mine_address: pit.x8s.de:8337
 api_address: http://btc.x8s.de/api/global.json
@@ -211,6 +233,7 @@ api_key: round_shares
 url: http://btc.x8s.de
 
 [bclc]
+coin:btc
 name: Bitcoins.lc (Prop)
 mine_address: bitcoins.lc:8080    
 api_address: http://www.bitcoins.lc/stats.json
@@ -220,6 +243,7 @@ api_key: "hash_rate":([ 0-9]+).
 url: https://www.bitcoins.lc
 
 [btcg]
+coin:btc
 name: BTCGuild.com (Prop)
 mine_address: btcguild.com:8332   
 api_address: https://www.btcguild.com/pool_stats.php
@@ -229,6 +253,7 @@ api_strip: ' '
 url: http://www.btcguild.com/my_account.php
 
 [btcgpps]
+coin:btc
 name: BTCGuild.com (PPS)
 mine_address: pps.btcguild.com:8332   
 api_address: http://pps.btcguild.com/
@@ -240,6 +265,7 @@ api_method: disable
 url: https://pps.btcguild.com/my_account.php
 
 [mineco]
+coin:btc
 name: MineCo.in (PPLNS)
 mine_address: mineco.in:3000 
 api_address: https://mineco.in/stats.json 
@@ -249,6 +275,7 @@ api_key_hashrate: hashrate
 url: https://mineco.in/workers
 
 [eclipsemc]
+coin:btc
 name: EclipseMC.com (Score)
 mine_address: pacrim.eclipsemc.com:8337
 api_address: https://eclipsemc.com/api.php?key=%(eclipsemc_apikey)s&action=poolstats
@@ -257,6 +284,7 @@ api_key: round_shares
 url: https://eclipsemc.com
 
 [mmf]
+coin:btc
 name: Mining.Mainframe.nl (PPLNS)
 mine_address: mining.mainframe.nl:8343 
 api_method:json
@@ -265,6 +293,7 @@ api_address: http://mining.mainframe.nl/api
 url: http://mining.mainframe.nl
 
 [bcpool]
+coin:btc
 name: BitcoinPool.com (Prop)
 mine_address: bitcoinpool.com:8334 
 api_address: http://bitcoinpool.com/index.php?do=currentround
@@ -279,6 +308,7 @@ api_key_estimate: <td width="120" align="center"><img src="btc.png" border="0" a
 url: http://bitcoinpool.com
 
 [unitedminers]
+coin:btc
 name: UnitedMiners.com (PPLNS)
 mine_address: pool.unitedminers.com:8332 
 api_address: http://www.unitedminers.com/?action=api
@@ -288,6 +318,7 @@ api_key_mhashrate: hashrate
 url: http://www.unitedminers.com
 
 [bmunion]
+coin:btc
 name: BitMinersUnion.org (Prop)
 mine_address: pool.bitminersunion.org:8341
 api_address: http://pool.bitminersunion.org/stats.php
@@ -296,6 +327,7 @@ api_key: Shares this round:([0-9]+)<br/>
 url: http://pool.bitminersunion.org
 
 [btcpool24]
+coin:btc
 name: BTCPool24 (Prop)
 mine_address: min.btcpool24.com:8338
 #api_address: http://www.btcpool24.com/json_stats.php
@@ -308,6 +340,7 @@ api_strip: ' '
 url: http://www.btcpool24.com
 
 [btcserv]
+coin:btc
 name: BTCServ.net (PPS)
 mine_address: btcserv.net:8335
 api_address: http://btcserv.net/json/pool/
@@ -321,6 +354,7 @@ api_key: shares
 url: https://btcserv.net/user/round-stats/
 
 [btcservpps]
+coin:btc
 name: BTCServ.net (PPS)
 mine_address: btcserv.net:8335
 api_address: http://btcserv.net/json/pool/
@@ -334,6 +368,7 @@ api_key: shares
 url: https://btcserv.net/user/round-stats/
 
 [bloodys]
+coin:btc
 name: Bloodys.com (Prop)
 mine_address:pool.bloodys.com:8332
 api_address:http://pool.bloodys.com/?action=statistics
@@ -343,6 +378,7 @@ api_strip:','
 url: http://pool.bloodys.com/?action=dashboard
 
 [digbtc]
+coin:btc
 name: DigBTC.net (Prop)
 lp_address:INVALID
 mine_address: btc.digbtc.net:8332
@@ -353,6 +389,7 @@ api_key_mhashrate: pool_total_mhash
 url: http://www.digbtc.net/main.php
 
 [bithasher]
+coin:btc
 name: BitHasher.com (Prop)
 mine_address: bithasher.com:8332
 api_address: http://bithasher.com
@@ -361,6 +398,7 @@ api_key: Round Shares</td><td>([,0-9]+)<
 url: http://bithasher.com/index.php/account
 
 [kiwipool]
+coin:btc
 name: KiwiPool.me (Prop)
 mine_address: pool2.kiwipool.me:8332
 api_address: http://5.hidemyass.com/ip-1/encoded/Oi8vd3d3Lmtpd2lwb29sLm1l&f=norefer
@@ -370,6 +408,7 @@ api_strip:''
 url: http://www.kiwipool.me
 
 [itzod]
+coin:btc
 name: Itzod.ru (PPS)
 mine_address: lp1.itzod.ru:8344
 api_address: https://pool.itzod.ru/api.php
@@ -378,6 +417,7 @@ api_key: total_shares_count
 url: http://pool.itzod.ru/index.php
 
 [btcmine]
+coin:btc
 name: BTCmine.com (Score)
 mine_address: btcmine.com:8332
 api_address: http://btcmine.com/stats/
@@ -388,6 +428,7 @@ api_key_mhashrate: <td><span id="rs_hashrate">([0-9.]+)
 url: http://btcmine.com
 
 [i0g]
+coin:i0c
 name: i0Guild.com (I0C)
 mine_address: i0.btcguild.com:8332   
 api_address: http://i0.btcguild.com/
@@ -397,6 +438,7 @@ api_strip: ' '
 url: http://i0.btcguild.com/my_account.php
 
 [bitfarms]
+coin:btc
 name: BitFarms.ca (PPS)
 mine_address: pool.bitfarms.ca:8332 
 api_address: http://bitfarms.ca/
@@ -406,6 +448,7 @@ api_strip: ' '
 url: http://bitfarms.ca/
 
 [masterpool]
+coin:btc
 name: MasterPool.eu (BTC+NMC)
 mine_address: US01.masterpool.eu:8888
 api_address: https://masterpool.eu/jsonstats
@@ -416,6 +459,7 @@ api_key_duration: blockchains,BTC,roundduration
 url:https://masterpool.eu/dashboard
 
 [namebit]
+coin:nmc
 name: NameBit.org (NMC)
 namecoin: Yep
 mine_address: pool.namebit.org:10000
@@ -426,6 +470,7 @@ api_strip:' '
 url: http://www.namebit.org/details?username=%(user)s
 
 [bitchomp]
+coin:nmc
 name: BitChomp.info (NMC)
 namecoin: Yep
 mine_address: bitchomp.info:8332
@@ -436,6 +481,7 @@ api_strip:''
 url: http://www.bitchomp.info/
 
 [abc]
+coin:btc
 name: ABCPool.co (PPS)
 mine_address: pool.ABCPool.co:8332
 api_address: http://www.abcpool.co/stats.php
@@ -445,6 +491,7 @@ api_strip: ''
 url: http://www.abcpool.co/stats.php
 
 [p2pool]
+coin:btc
 name: p2pool (PPLNS)
 mine_address: localhost:8332
 api_address: http://localhost:8332
@@ -453,6 +500,7 @@ api_key: code
 url: https://en.bitcoin.it/wiki/P2Pool
 
 [donation]
+coin:btc
 name: Donation
 role: donation
 percent: 1
@@ -465,6 +513,7 @@ pass: donation
 url: http://eligius.st/~artefact2/5/1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC
 
 [scguild]
+coin:scc
 name: scGuild.com (SCC)
 mine_address: sc.btcguild.com:8332   
 api_address: http://sc.btcguild.com/
@@ -474,6 +523,7 @@ api_strip: ''
 url: http://sc.btcguild.com/my_account.php
 
 [sodigbtc]
+coin:scc
 name: s0DigBTC.net (SCC)
 mine_address: sobtc.digbtc.net:8332
 api_address: http://sobtc.digbtc.net/papi.php
@@ -482,6 +532,7 @@ api_key: shares_this_round
 url: http://sobtc.digbtc.net/main.php
 
 [scbitparking]
+coin:scc
 name: scBitParking.com (SCC)
 mine_address: scpool.bitparking.com:12098
 api_address: http://scpool.bitparking.com/user
@@ -491,6 +542,7 @@ api_strip: ' '
 url: http://scpool.bitparking.com/user/%(user)s
 
 [squid]
+coin:scc
 name: SquidNet (SCC)
 mine_address: pool.squidnet.org:8341
 api_address: http://pool.squidnet.org/api
@@ -499,6 +551,7 @@ api_key: shares_this_round
 url: http://pool.squidnet.org
 
 [mine4us]
+coin:scc
 name: mine-for.us (SCC)
 mine_address: go.mine-for.us:16101
 api_address: http://solid.mine-for.us/index.php?page=round
@@ -508,6 +561,7 @@ api_strip: ' '
 url: http://solid.mine-for.us/index.php?page=withdraw
 
 [poolmunitynmc]
+coin:btc
 name: PoolMunity.com (NMC)
 namecoin: Yep
 mine_address: poolmunity.com:18332
@@ -517,6 +571,7 @@ api_key: totalShares
 url: http://poolmunity.com
 
 [ixparking]
+coin:ixc
 name: BitParking.com (IXC)
 mine_address: ixpool.bitparking.com:10098
 api_address: http://ixpool.bitparking.com/pool
@@ -526,6 +581,7 @@ api_strip: ' '
 url: http://ixpool.bitparking.com/user/%(user)s
 
 [i0parking]
+coin:i0c
 name: BitParking.com (I0C)
 mine_address: i0pool.bitparking.com:11098
 api_address: http://i0pool.bitparking.com/pool
@@ -535,6 +591,7 @@ api_strip: ' '
 url: http://i0pool.bitparking.com/user/%(user)s
 
 [digi0c]
+coin:i0c
 name: DigBTC.net (I0C)
 mine_address: i0.digbtc.net:8382
 api_address: http://i0.digbtc.net/papi.php
@@ -543,6 +600,7 @@ api_key: shares_this_round
 url: http://i0.digbtc.net/main.php
 
 [digixc]
+coin:ixc
 name: DigBTC.net (IXC)
 mine_address: ix.digbtc.net:9366
 api_address: http://ix.digbtc.net/papi.php
@@ -551,6 +609,7 @@ api_key: shares_this_round
 url: http://ix.digbtc.net/main.php
 
 [asspenny]
+coin:btc
 name: Keninishna's unlucky pool (Prop)
 mine_address: asspennypool.com:8443
 api_address: http://asspennypool.com/api.php?api_key=%(asspenny_user_apikey)s
@@ -560,6 +619,7 @@ api_key_mhashrate: poolhash
 url: http://asspennypool.com
 
 [guildminers]
+coin:btc
 name: Guild Miners (Prop)
 mine_address: pit.guildminers.com:8332
 api_address: http://guildminers.com/
@@ -569,6 +629,7 @@ api_strip: ','
 url: https://guildminers.com/account
 
 [yourbtc]
+coin:btc
 name: YourBtc.net (DGP)
 mine_address: yourbtc.net:8332
 api_address: http://yourbtc.net
@@ -579,6 +640,7 @@ api_key_ghashrate: Hashrate:</strong> ([0-9.]+) GHash/s
 url: http://yourbtc.net
 
 [bitpenny]
+coin:btc
 #http://www.bitpenny.com/
 name: BitPenny (PPS)
 mine_address: bitpenny.dyndns.biz:8338
@@ -589,6 +651,7 @@ api_key: ([0-9]+).[0-9]+ Mh/s &nbsp
 url: http://www.bitpenny.com
 
 [coinotron]
+coin:btc
 name: coinotron.com (Score)
 mine_address: coinotron.com:8322
 api_address: http://coinotron.com/coinotron/AccountServlet?action=home
@@ -598,6 +661,7 @@ api_key_duration_hour_min: [0-9]+</td>\W+<td style="text-align: right;">([ 0-9]+
 url: http://coinotron.com
 
 [simplecoin]
+coin:btc
 name: simplecoin.us (BTC+NMC)
 mine_address: pool.simplecoin.us:8337
 api_address: http://simplecoin.us/api.php
