pools.cfg small clean-up

--- a/pools.cfg
+++ b/pools.cfg
@@ -195,7 +195,6 @@ url: http://poolmunity.com
 [bitparking]
 coin:nmc
 name: BitParking.com (NMC)
-namecoin: Yep
 mine_address: bitparking.com:9098
 api_address: http://bitparking.com/pool
 api_method: re
@@ -343,20 +342,6 @@ api_key: shares
 #api_strip: ","
 url: https://btcserv.net/user/round-stats/
 
-[btcservpps]
-coin:btc
-name: BTCServ.net (PPS)
-mine_address: btcserv.net:8335
-api_address: http://btcserv.net/json/pool/
-api_method: json
-api_key: shares
-#url: https://btcserv.net/user/stats/
-#api_address: http://btcserv.net
-#api_method: re
-#api_key: </span> ([,0-9]+) shares
-#api_strip: ","
-url: https://btcserv.net/user/round-stats/
-
 [bloodys]
 coin:btc
 name: Bloodys.com (Prop)
@@ -451,7 +436,6 @@ url:https://masterpool.eu/dashboard
 [namebit]
 coin:nmc
 name: NameBit.org (NMC)
-namecoin: Yep
 mine_address: pool.namebit.org:10000
 api_address: http://www.namebit.org/
 api_method:re
@@ -462,7 +446,6 @@ url: http://www.namebit.org/details?username=%(user)s
 [bitchomp]
 coin:nmc
 name: BitChomp.info (MergeM-SMPPS)
-namecoin: Yep
 mine_address: bitchomp.info:8332
 api_address: http://www.bitchomp.info/api
 api_method:re
@@ -551,9 +534,8 @@ api_strip: ' '
 url: http://solid.mine-for.us/index.php?page=withdraw
 
 [poolmunitynmc]
-coin:btc
+coin:nmc
 name: PoolMunity.com (NMC)
-namecoin: Yep
 mine_address: poolmunity.com:18332
 api_address: https://poolmunity.com/api.php?server
 api_method: json
