Upd simplecoin api

--- a/pools.cfg
+++ b/pools.cfg
@@ -637,9 +637,14 @@ url: http://coinotron.com
 coin:btc
 name: simplecoin.us (MergeM-Prop)
 mine_address: pool.simplecoin.us:8337
-api_address: http://simplecoin.us/api.php
-api_method: json
-api_key: btcp__current_shares
-api_key_mhashrate: pool_hashrate
+#api_address: http://simplecoin.us/api.php
+#api_method: json
+#api_key: btcp__current_shares
+#api_key_mhashrate: pool_hashrate
+api_address: http://simplecoin.us/stats.php?pool_id=3
+api_method: re
+api_key: Current BTC Round Shares</td><td>([,0-9]+)</td>
+api_key_ghashrate: Pool Hash Rate</td><td>([.0-9]+) Ghashes/s
+api_strip: ','
 url: http://simplecoin.us
 
