Fix nmcbit coin type

--- a/pools.cfg
+++ b/pools.cfg
@@ -203,7 +203,7 @@ api_strip: ' '
 url: http://bitparking.com/user/%(user)s
 
 [nmcbit]
-coin:btc
+coin:nmc
 name: NMCBit.com (MergeM-PPS)
 mine_address: nmcbit.com:8332
 api_address: http://www.nmcbit.com/statistics
